local file + samba playback works on both windows xp and debian 6